<resources>
    <string name="app_name">Kotlin Demo</string>

    <string name="title_kotlin">Kotlin</string>
    <string name="title_dbflow">DBFlow</string>
    <string name="title_dagger">Dagger</string>
    <string name="title_form_dialog">Edit</string>

    <string name="button_ok">OK</string>
    <string name="button_butter_knife">ButterKnife</string>
    <string name="button_dbflow">DBFlow</string>
    <string name="button_dagger">Dagger</string>

    <string name="string_hello">Hello %1$s</string>

    <string name="hint_name">Please input your name</string>
    <string name="hint_birthday">Please select your birthday</string>

    <string name="label_all">All</string>
    <string name="label_name">Name</string>
    <string name="label_gender">Gender</string>
    <string name="label_gender_male">Male</string>
    <string name="label_gender_female">Female</string>
    <string name="label_birthday">Birthday</string>

    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>

    <string name="msg_person_updated">Person information updated</string>
    <string name="msg_person_created">Person information created</string>
    <string name="msg_person_deleted">Person information deleted</string>

    <string name="error_load_persons">Cannot load persons, error caused</string>
    <string name="error_update_persons">Cannot modify persons, error caused</string>
    <string name="error_exception_caused">Exception caused</string>
</resources>
